# leoclip

./: .gitignore  PKGBUILD  README.md  pyproject.toml
src/leoclip/: actions.py  clipboard.py  config.py  daemon.py  database.py  menu.py  ui.py  utils.py
